# bike-store-lakehouse-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: lakehouse_pipeline.py
src/config/: settings.py
src/config/queries/: aggregate.py  gold.py
src/helpers/: delta_writer.py
src/pipeline/: ingest_bronze.py  ingest_gold.py  ingest_landing.py  ingest_silver.py  run_analytics.py
src/utils/: azure.py  connection.py  duckedb.py
src/utils/schema/: schema_loader.py  schema_registry.json
